colspan error fixed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <colgroup>
             <col span="2">
             <col style="border: 3px solid rgb(159, 218, 188)">
+            <col span="9">
         </colgroup>
         <thead>
             <tr>
