--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li>
             <h2>Card Five</h2>
             <div class="inner">
-              <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
+              <p>Noris grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
             </div>
           </li>
 
