--- a/index.html
+++ b/index.html
@@ -1,78 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8"/>
-    <title>Responsive Web Design Task: Task</title>
-    <link href="styles/style.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>St Huxley's Community College</title>
+    <link href="styles/stylesheet.css" type="text/css" rel="stylesheet">
+    <link href="styles/style.css" type="text/css" rel="stylesheet">
   </head>
-
   <body>
-    <header>
-      <div class="title">My Website</div>
-      <nav>
-        <ul>
-          <li>
-            <a href="">Link 1</a>
-          </li>
-          <li>
-            <a href="">Link 2</a>
-          </li>
-          <li>
-            <a href="">Link 3</a>
-          </li>
-        </ul>
-      </nav>
 
-    </header>
+  <header>
+    <h1>St Huxley's Community College</h1>
+  </header>
 
-    <main>
-      <article>
-        <h1>This is the main heading</h1>
-        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+  <section>
+      <h2>Brave new world</h2>
 
-        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+      <p>It's a brave new world out there. Our children are being put in increasing more competitive situations, both during recreation, and as they start to move into the adult world of <a href="https://en.wikipedia.org/wiki/Examination">examinations</a>, <a href="https://en.wikipedia.org/wiki/Jobs">jobs</a>, <a href="https://en.wikipedia.org/wiki/Career">careers</a>, and other life choices. Having the wrong mindset, becoming <a href="https://en.wikipedia.org/wiki/Emotion">too emotional</a>, or making the wrong choices can contribute to them experiencing difficulty in taking their rightful place in today's ideal society.</p>
 
-        <ul class="cards">
-          <li>
-            <h2>Card One</h2>
-            <div class="inner">
-              <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Two</h2>
-            <div class="inner">
-              <p>Daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Three</h2>
-            <div class="inner">
-              <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Four</h2>
-            <div class="inner">
-              <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Five</h2>
-            <div class="inner">
-              <p>Noris grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
-            </div>
-          </li>
+      <p>As concerned parents, guardians or carers, you will no doubt want to give your children the best possible start in life — and you've come to the right place.</p>
 
-        </ul>
-      </article>
-      <aside class="sidebar">
-        <p>Have you discovered all of the other excellent content on this website?</p>
+      <h2>The best start in life</h2>
 
-      </aside>
-    </main>
+      <p>At St. Huxley's, we pride ourselves in not only giving our students a top quality education, but also giving them the societal and emotional intelligence they need to win big in the coming utopia. We not only excel at subjects such as genetics, data mining, and chemistry, but we also include compulsory lessons in:</p>
+
+      <ul>
+        <li>Emotional control</li>
+        <li>Judgement</li>
+        <li>Assertion</li>
+        <li>Focus and resolve</li>
+      </ul>
+
+      <p>If you are interested, then you next steps will likely be to:</p>
+      
+      <ol>
+        <li><a href="#">Call us</a> for more information</li>
+        <li><a href="#">Ask for a brochure</a>, which includes signup form</li>
+        <li><a href="#">Book a visit</a>!</li>
+      </ol>
+  </section>
+
+  <aside>
+
+    <h2>Top course choices</h2>
+
+    <ul>
+      <li><a href="#">Genetic engineering</a></li>
+      <li><a href="#">Genetic mutation</a></li>
+      <li><a href="#">Organic Chemistry</a></li>
+      <li><a href="#">Pharmaceuticals</a></li>
+      <li><a href="#">Biochemistry with behaviour</a></li>
+      <li><a href="#">Pure biochemistry</a></li>
+      <li><a href="#">Data mining</a></li>
+      <li><a href="#">Computer security</a></li>
+      <li><a href="#">Bioinformatics</a></li>
+      <li><a href="#">Cybernetics</a></li>
+    </ul>
+
+    <p><a href="#">See more</a></p>
+
+  </aside>
+
+  <nav>
+
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Finding us</a></li>
+      <li><a href="#">Courses</a></li>
+      <li><a href="#">Staff</a></li>
+      <li><a href="#">Media</a></li>
+      <li><a href="#">Prospectus</a></li>
+    </ul>
+
+  </nav>
+
+  <footer>
+
+    <p>&copy; 2016 St Huxley's Community College</p>
+
+  </footer>
 
   </body>
-
 </html>
